# uom-eee-eeen11202.github.io

./: .buildinfo  .gitignore  .gitmodules  404.html  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: 404.doctree  environment.pickle  index.doctree
.doctrees/chapters/: about.doctree  course_administration.doctree  course_policies.doctree  getting_started.doctree  instructor.doctree  useful_information.doctree
.doctrees/chapters/about/: ai_use_us.doctree  copyright.doctree  instructor.doctree  privacy_accessibility.doctree
.github/workflows/: documentation.yml
_sources/: 404.rst.txt  index.rst.txt
_sources/chapters/: about.rst.txt  course_administration.rst.txt  course_policies.rst.txt  getting_started.rst.txt  instructor.rst.txt
_static/: pygments-theme-light.css
chapters/: about.html  course_administration.html  course_policies.html  getting_started.html  instructor.html  useful_information.html
chapters/about/: ai_use_us.html  copyright.html  instructor.html  privacy_accessibility.html
chapters/course_administration/: assessments.html  feedback.html  ilos.html  learning_style.html  limitations.html  materials.html  suggested_reading.html  unit_delivery_plan.html
chapters/course_policies/: academic_malpractice.html  ai_use.html  ai_use_us.html
chapters/getting_started/: install.html  style_guide.html
chapters/useful_information/: install.html  limitations.html  style_guide.html
docs/: conf.py  index.rst
docs/chapters/: about.rst  course_policies.rst  useful_information.rst
(+106 files in other folders)
